# 02

./: .cproject  .project  CMakeLists.txt  CMakePresets.json  LPC55S16_Project LinkServer Debug.launch  LPC55S16_Project_Debug.ld  Untitled Diagram.drawio  flags.cmake  mcux_include.json  user_override.cmake
.scannerwork/: report-task.txt
ADC/: Driver_ADC.c  Driver_ADC.h
Alarm/: Alarm.c  Alarm.h
Battery/: Battery.c  Battery.h  battery_frames.c
Bolus_Concept/: Bolus_Calculate..c  Bolus_Header.h  Bolus_Screen.c  bolus_limit.c  bolus_menu_scrn.c
Boot_up/: Boot_up.c  Boot_up.h
Brand/: Brand.c  Brand.h  Frame_Brand_List.c
Calibration_Screen/: Calibration_Screen.c  Calibration_Screen.h
DAC_DRIVER/: DAC_driver.c  DAC_driver.h
Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  LPC55S16_Project.axf  LPC55S16_Project.map  LPC55S16_Project_Debug.ld  LPC55S16_Project_Debug_library.ld  LPC55S16_Project_Debug_memory.ld  build.ninja  cmake_install.cmake  makefile  sources.mk
Debug/ADC/: Driver_ADC.d  Driver_ADC.su  subdir.mk
Debug/Alarm/: Alarm.d  Alarm.su  subdir.mk
Debug/Battery/: Battery.d  Battery.su  battery_frames.d  battery_frames.su  subdir.mk
Debug/Bolus_Concept/: Bolus_Calculate..d  Bolus_Calculate..su  Bolus_Screen.d  Bolus_Screen.su  bolus_limit.d  bolus_limit.su  bolus_menu_scrn.d  bolus_menu_scrn.su  subdir.mk
Debug/Boot_up/: Boot_up.d  Boot_up.su  subdir.mk
Debug/Brand/: Brand.d  Brand.su  Frame_Brand_List.d  Frame_Brand_List.su  subdir.mk
Debug/Calibration_Screen/: Calibration_Screen.d  Calibration_Screen.su  subdir.mk
Debug/DAC_DRIVER/: DAC_driver.d  DAC_driver.su  subdir.mk
Debug/Dose_rate/: Dosage_mode.d  Dosage_mode.su  Dose_frame.d  Dose_frame.su  subdir.mk
Debug/Driver_SPI/: Driver_SPI.d  Driver_SPI.su  subdir.mk
Debug/Driver_ST7789V/: TFT_Commands.d  TFT_Commands.su  subdir.mk
Debug/Drug_List/: Add_Drug.d  Add_Drug.su  Dose_mode_fun.d  Dose_mode_fun.su  Drug_List.d  Drug_List.su  Drug_category.d  Drug_category.su  Drug_frame.d  Drug_frame.su  Drug_name_search.d  Drug_name_search.su  Fav_drug_list.d  Fav_drug_list.su  Rec_drug_list.d  Rec_drug_list.su  Rec_frame.d  Rec_frame.su  custom_drug_list.d  custom_drug_list.su  fav_frame.d  fav_frame.su  subdir.mk
Debug/Dynamic_Pressure/: Dynamic_pressure.d  Dynamic_pressure.su  subdir.mk
Debug/Event_log/: Event_log.d  Event_log.su  Events_log_frames.d  Events_log_frames.su  subdir.mk
Debug/External_RTC/: EXTERNAL.RTC.d  EXTERNAL.RTC.su  subdir.mk
Debug/FR_Calculate/: FR_CALC.d  FR_CALC.su  subdir.mk
Debug/Factory_Setting/: factory_menu.d  factory_menu.su  manu_dt_yr.d  subdir.mk
Debug/Flowrate_screen/: Flowrate_Screen.d  Flowrate_Screen.su  subdir.mk
Debug/Font_style/: 12_Arial.d  14_Arial.d  20_Arial.d  35_Arial.d  36_Arial.d  43_Calibri.d  48_Calibri.d  9_Arial.d  AKAS_LOGO.d  subdir.mk
Debug/GPIO/: GPIO.d  GPIO.su  subdir.mk
Debug/I2C/: Driver_I2C.d  Driver_I2C.su  I2C.d  subdir.mk
Debug/Infused_Calculate/: Infused_Calculate.d  Infused_Calculate.su  subdir.mk
Debug/Infused_Caluclate/: subdir.mk
Debug/Keypad/: Keypad.d  Keypad.su  subdir.mk
Debug/Last_Infusion_clear/: Last_infusion.d  Last_infusion.su  subdir.mk
Debug/Linear_Pot_Calibration/: Linear_pot.d  Linear_pot.su  subdir.mk
Debug/Main_screen/: Main_frame.d  Main_frame.su  Main_screen_functionality.d  Main_screen_functionality.su  subdir.mk
Debug/Menu_Setting/: Device_main_scrn.d  Device_main_scrn.su  Main_menu.d  Main_menu.su  kvo_menu.d  kvo_menu.su  occl_menu.d  occl_menu.su  subdir.mk  sys_sett_menu.d  sys_sett_menu.su
Debug/Mode_function/: mode_screen.d  mode_screen.su  subdir.mk
Debug/Motor/: Motor.d  Motor.su  subdir.mk
Debug/Occlusion/: Driver_HX711.d  Driver_HX711.su  Occlusion.d  Occlusion.su  (+1 more)
Dose_rate/: Dosage_mode.c  Dosage_mode.h  Dose_frame.c
Driver_SPI/: Driver_SPI.c  Driver_SPI.h
Driver_ST7789V/: TFT_Commands.c  TFT_Commands.h
Drug_List/: Add_Drug.c  Dose_mode_fun.c  Drug_List.c  Drug_List.h  Drug_category.c  Drug_frame.c  Drug_name_search.c  Fav_drug_list.c  Rec_drug_list.c  Rec_frame.c  custom_drug_list.c  fav_frame.c
Dynamic_Pressure/: Dynamic_Pressure.h  Dynamic_pressure.c
Event_log/: Event_log.c  Events_log.h  Events_log_frames.c
External_RTC/: EXTERNAL.RTC.c  EXTERNAL_RTC.h
FR_Calculate/: FR_CALC.c  FR_CALC.h
Factory_Setting/: factory.h  factory_menu.c  manu_dt_yr.c
Flowrate_screen/: Flowrate_Screen.c  Flowrate_Screen.h
Font_style/: 12_Arial.c  14_Arial.c  20_Arial.c  35_Arial.c  36_Arial.c  43_Calibri.c  48_Calibri.c  9_Arial.c  AKAS_LOGO.c  Font.h
GPIO/: GPIO.c  GPIO.h
I2C/: Driver_I2C.c  Driver_I2C.h  I2C.c
Infused_Calculate/: Infused_Calculate.c  infused_calculate.h
Keypad/: Keypad.c  Keypad.h
Last_Infusion_clear/: Last_infusion.c
Linear_Pot_Calibration/: Linear_pot.c  Linear_pot.h
Main_screen/: Main_frame.c  Main_screen.h  Main_screen_functionality.c
Menu_Setting/: Device_main_scrn.c  Main_Menu.h  Main_menu.c  kvo_menu.c  occl_menu.c  sys_sett_menu.c
Mode_function/: mode_screen.c  modes.h
Motor/: Motor.c  Motor.h
Occlusion/: Driver_HX711.c  Driver_HX711.h  Occlusion.c  Occlusion.h
PINT/: Driver_PINT.c  Driver_PINT.h
PLUNGER_ALARM/: Data_Sample.c  plunger_alarm.c  plunger_alarm.h
PWM/: Driver_PWM.c  PWM.h
Password/: Password.c  Password.h  Password_screens.c
Power_off/: Power_off.c  Power_off.h
Pressure_Calibration/: Pressure_calib.c
RTC/: RTC.c  RTC.h  year.c
RTC_DRIVER/: RTC_driver.h  rtc_driver.c
SD_Calibration/: SD_Calib.c  SD_Calib.h  SD_Calib_frames.c
Serial_no_setting/: serialno_set.c
Shapes/: Color.h  Shapes.c  Shapes.h  Symbol.c
Sound/: sound.c  sound.h
Stepper_Motor/: STEPPER.c  STEPPER.h
Syringe_Length_Calibration/: SYR_length_calib.c  SYR_length_frame.c  Syringe_calib_header.h
TFT_String/: TFT_String.c  TFT_String.h
Timer/: Driver_Timer.c  Driver_Timer.h
Used_hrs/: Consumed_hrs.h  Used_hrs.c
VTBI/: Target_fun.c  Target_fun.h
board/: board.c  board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
source/: HEADER.h  Linear_Header.h  main.c
(+177 files in other folders)
